ColinFay published a site update

--- a/structure.html
+++ b/structure.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-05-11" />
+<meta name="date" content="2020-05-12" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -457,7 +457,7 @@ On top of these files, what so you needed to make it <strong>a production-ready 
 <div id="metadata" class="section level4">
 <h4><span class="header-section-number">3.1.1.1</span> Metadata</h4>
 <p>First of all, <strong>metadata</strong>.
-In other words, all the necessary information for something that runs in production: the name of the app, the version number (which is crucial to any serious, production-level project), what the application does, who to contact if something goes wrong… etc.</p>
+In other words, all the necessary information for something that runs in production: the name of the app, the version number (which is crucial to any serious, production-level project), what the application does, who to contact if something goes wrong, etc.</p>
 </div>
 <div id="dependencies" class="section level4">
 <h4><span class="header-section-number">3.1.1.2</span> Dependencies</h4>
@@ -528,7 +528,7 @@ Note that in many cases developers go for a <code>.md</code> file (short for mar
 There are also useful if you need to detail the core functions of the application using a static document.
 In a perfect world, you would create one vignette per shiny page/tab.</li>
 <li>Function documentation.
-Every function in your package should come with its own documentation, even if only for your future self.
+Every function in your package should come with its own documentation, even if it is just for your future self.
 “Exported” functions, the one which are available once you run <code>library(myapp)</code>, should be fully documented and will be listed in the package help page.
 Internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions<a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a>
 .</li>
@@ -561,7 +561,7 @@ And, if you built your app with <code>{golem}</code>, you can launch the app usi
 </div>
 <div id="rstudio-connect-shiny-server-shinyapps.io" class="section level4">
 <h4><span class="header-section-number">3.1.3.2</span> RStudio Connect, Shiny Server, shinyapps.io</h4>
-<p>Sending a Shiny application to a Rstudio product currently requires placing an R script at the root of your package directory.</p>
+<p>Sending a Shiny application to a RStudio product currently requires placing an R script at the root of your package directory.</p>
 <p>To run your application on these platforms, you will need to use a “standard” Shiny filename pattern, <em>i.e.</em> an <code>app.R</code> file or <code>ui.R</code> / <code>server.R</code>, and send the whole thing to the server.
 To integrate your “Shiny App as a package” into Connect or Shiny Server, you can adopt two strategies:</p>
 <ul>
@@ -586,7 +586,7 @@ You will need an <code>app.R</code> file at the root of the package:</li>
 In order to dockerize your app, create a Dockerfile that lists your package to be installed as in the local deployment with the appropriate <code>remotes::install_*()</code> function.
 Then, use as a <code>CMD</code> <code>R -e 'options("shiny.port" = 80, shiny.host = "0.0.0.0"); myuberapp::run_app()'</code> so that your app will be launched when starting the Docker container.
 Change the output port according to your needs.</p>
-<p>Note that {golem} provides you the Dockerfile you need with <code>golem::add_dockerfile()</code>.</p>
+<p>Note that <code>{golem}</code> provides you the Dockerfile you need with <code>golem::add_dockerfile()</code>.</p>
 <p>We will return to Docker containers in a few chapters, notably in the context of building <code>Dockerfile</code> for <code>{golem}</code>-based applications.</p>
 </div>
 </div>
@@ -604,7 +604,7 @@ If you need to read some resources before continuing, feel free to have a look a
 </div>
 <div id="using-shiny-modules" class="section level2">
 <h2><span class="header-section-number">3.2</span> Using Shiny Modules</h2>
-<p>Modules are one of the most powerful tools for building Shiny Application in a maintainable and sustainable manner.</p>
+<p>Modules are one of the most powerful tools for building Shiny Applications in a maintainable and sustainable manner.</p>
 <div id="why-are-we-using-shiny-modules" class="section level3">
 <h3><span class="header-section-number">3.2.1</span> Why are we using Shiny modules?</h3>
 <p>Small is beautiful.
@@ -632,7 +632,7 @@ The need to be unique is made a little bit complex by the way Shiny handles the 
 Wait, namespaces?</p>
 <p>Namespaces are a computer science concept created to handle a common issue: how to share the same name for a variable in various places of your program without them conflicting.
 In other words, how to use an object called <code>plop</code> several times in the program, and still be sure that it is correctly used depending on the context.</p>
-<p>R itself has a system for namespaces ; this is what packages do and why you can have <code>purrr::flatten</code> and <code>jsonlite::flatten</code> on the same computer and inside the same script: the function names are the same, but the two live in different namespaces, and the behavior of both functions can be totally different as the symbol is evaluated inside two different namespaces.
+<p>R itself has a system for namespaces; this is what packages do and why you can have <code>purrr::flatten</code> and <code>jsonlite::flatten</code> on the same computer and inside the same script: the function names are the same, but the two live in different namespaces, and the behavior of both functions can be totally different as the symbol is evaluated inside two different namespaces.
 If you want to learn more about namespaces, please refer to the <a href="https://adv-r.hadley.nz/environments.html#special-environments">7.4 Special environments</a> chapter from <em>Advanced R</em>, or turn to any computer science book: namespaces are pretty common in any programming language.</p>
 <p>So, that is what modules are made for: creating small namespaces where you can safely define <code>ids</code> without conflicting with other ids in the app.
 Why do we need to do that?
