--- a/successfulshinyapp.html
+++ b/successfulshinyapp.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-05-11" />
+<meta name="date" content="2020-05-12" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -462,7 +462,7 @@ And that is probably one of the main reason why this package has become so succe
 <p>The first version of <code>{shiny}</code> was published in 2012.
 Since then, it has been one of the top project of the RStudio team.
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors.
-It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 739 reverse dependencies (i.e packages that depend on it), according to <code>revdep("shiny")</code> from <code>{devtools}</code> <span class="citation">(Wickham, Hester, and Chang <a href="#ref-R-devtools" role="doc-biblioref">2020</a>)</span>.</p>
+It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 741 reverse dependencies (i.e packages that depend on it), according to <code>revdep("shiny")</code> from <code>{devtools}</code> <span class="citation">(Wickham, Hester, and Chang <a href="#ref-R-devtools" role="doc-biblioref">2020</a>)</span>.</p>
 <p>If you are very new to Shiny, this book might feel a little bit overwhelming: we will be discussing some advanced <code>{shiny}</code> and software engineering methods, best practices and structural idea for sending Shiny applications to production.
 This books relies on the assumption that you already know how to build basic Shiny applications, and that you want to push your Shiny skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
 If you are very new to Shiny, we suggest you start with the <a href="https://mastering-shiny.org/">Mastering Shiny book</a> before reading the present book.</p>
@@ -509,7 +509,7 @@ One of the goal of this book is to present you a methodology and toolkit that wi
 <div id="customers-and-users-complexity" class="section level4">
 <h4><span class="header-section-number">1.2.1.2</span> Customers and users complexity</h4>
 <p>Customers and end users see complexity as <em>interface complexity</em>.</p>
-<p>Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the app, the presence of unfamiliar behavior or terms, visual distractions…
+<p>Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the app, the presence of unfamiliar behavior or terms, visual distractions, etc.
 This book will also bring you strategy to help you cope with the need for simplification when it comes to designing interface.</p>
 </div>
 </div>
@@ -593,7 +593,7 @@ Levels: setosa versicolor virginica</code></pre>
 As noted in <em>The Art of Unix Programming</em> <span class="citation">(Raymond <a href="#ref-ericraymond2003" role="doc-biblioref">2003</a>)</span>, “Chapter 13: Speaking of Complexity”, “<em>Pressure to keep the codebase size down by using extremely dense and complicated implementation techniques can cause a cascade of implementation complexity in the system, leading to an un-debuggable mess</em>”.</p>
 <p>Still, this metric can be useful to reinforce what you have learned from other metrics.
 It is rather unlikely that you will find this “extreme” coding style we showed above, and even if it might not make sense to compare two codebases that just differ by 1 or 2 % of lines of code, it is very likely that a codebase which is ten, one hundred, one thousand times larger is a more complex software.</p>
-<p>Another good metric related to this metric is the number of files in the project: R developers tend to split their functions into several files, so the more files you will find in a project, the larger the codebase is.
+<p>Another good metric related to code complexity is the number of files in the project: R developers tend to split their functions into several files, so the more files you will find in a project, the larger the codebase is.
 And numerous files can also be a sign of maintenance complexity, as it may be harder to reason about an app logic split into several files than about something that fits into one linear code inside one file.<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a>
 On the other hand, one big 10,000-lines file which is standing alone in the project is not a good sign either.</p>
 <p>If you want to use the number of lines metric, you can do it from R with the <code>{cloc}</code> <span class="citation">(Rudis and Danial <a href="#ref-R-cloc" role="doc-biblioref">2020</a>)</span> package, available at <a href="https://github.com/hrbrmstr/cloc" class="uri">https://github.com/hrbrmstr/cloc</a>.</p>
@@ -693,7 +693,7 @@ While developing your application, the one you will be interested in is <code>cy
 <p>And, bonus, this <code>cyclocomp_package()</code> function can also be used to retrieve the number of functions inside the package.</p>
 <p>So, as The Clash said, “what are we gonna do now?”
 You might have heard this saying: “if you copy and paste a piece of code twice, you should write a function”, so you might be tempted to do that.
-Indeed, splitting code into smaller pieces lower the local cyclomatic complexity, as smaller functions have lower cyclomatic complexity.
+Indeed, splitting code into smaller pieces lowers the local cyclomatic complexity, as smaller functions have lower cyclomatic complexity.
 But that is just at a local level, and it can be a suboptimal option: having a very large number of functions can make it harder to navigate through the codebase.
 In the end of the day splitting into smaller functions is not a magic solution because (A) the global complexity of the app is not lowered by splitting things into pieces (just local complexity), and (B) the deeper the call stack, the harder it can be to debug.</p>
 </div>
