ColinFay published a site update

--- a/deploy-golem.html
+++ b/deploy-golem.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-10-02" />
+<meta name="date" content="2020-10-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -266,18 +266,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="part"><span><b>III Step 2: Prototype</b></span></li>
-<li class="chapter" data-level="8" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html"><i class="fa fa-check"></i><b>8</b> Setting up for success with <code>{golem}</code></a><ul>
-<li class="chapter" data-level="8.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
-<li class="chapter" data-level="8.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
-<li class="chapter" data-level="8.2.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
-<li class="chapter" data-level="8.2.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#set-common-files"><i class="fa fa-check"></i><b>8.2.2</b> Set common Files</a></li>
-<li class="chapter" data-level="8.2.3" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#use-recommended-elements"><i class="fa fa-check"></i><b>8.2.3</b> Use Recommended Elements</a></li>
-<li class="chapter" data-level="8.2.4" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-utilitary-functions"><i class="fa fa-check"></i><b>8.2.4</b> Add utilitary functions</a></li>
-<li class="chapter" data-level="8.2.5" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#changing-the-favicon"><i class="fa fa-check"></i><b>8.2.5</b> Changing the favicon</a></li>
+<li class="chapter" data-level="8" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html"><i class="fa fa-check"></i><b>8</b> Setting up for success with <code>{golem}</code> (#settingupsuccess)</a><ul>
+<li class="chapter" data-level="8.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
+<li class="chapter" data-level="8.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
+<li class="chapter" data-level="8.2.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
+<li class="chapter" data-level="8.2.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#set-common-files"><i class="fa fa-check"></i><b>8.2.2</b> Set common Files</a></li>
+<li class="chapter" data-level="8.2.3" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#use-recommended-elements"><i class="fa fa-check"></i><b>8.2.3</b> Use Recommended Elements</a></li>
+<li class="chapter" data-level="8.2.4" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-utilitary-functions"><i class="fa fa-check"></i><b>8.2.4</b> Add utilitary functions</a></li>
+<li class="chapter" data-level="8.2.5" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#changing-the-favicon"><i class="fa fa-check"></i><b>8.2.5</b> Changing the favicon</a></li>
 </ul></li>
-<li class="chapter" data-level="8.3" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
-<li class="chapter" data-level="8.3.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
-<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-css-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS &amp; JS Files</a></li>
+<li class="chapter" data-level="8.3" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
+<li class="chapter" data-level="8.3.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
+<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-css-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS &amp; JS Files</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="stepprotopype.html"><a href="stepprotopype.html"><i class="fa fa-check"></i><b>9</b> Building an “ipsum-app”</a><ul>
@@ -323,7 +323,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="secure.html"><a href="secure.html"><i class="fa fa-check"></i><b>12</b> Version Control</a><ul>
-<li class="chapter" data-level="12.1" data-path="secure.html"><a href="secure.html#using-version-control-with-git"><i class="fa fa-check"></i><b>12.1</b> Using Version Control with <code>git</code></a><ul>
+<li class="chapter" data-level="12.1" data-path="secure.html"><a href="secure.html#version-control"><i class="fa fa-check"></i><b>12.1</b> Using Version Control with <code>git</code></a><ul>
 <li class="chapter" data-level="12.1.1" data-path="secure.html"><a href="secure.html#why-version-control"><i class="fa fa-check"></i><b>12.1.1</b> Why Version Control?</a></li>
 <li class="chapter" data-level="12.1.2" data-path="secure.html"><a href="secure.html#git-basics-add---commit---push---pull"><i class="fa fa-check"></i><b>12.1.2</b> <code>Git</code> basics: <code>add</code> - <code>commit</code> - <code>push</code> - <code>pull</code></a></li>
 <li class="chapter" data-level="12.1.3" data-path="secure.html"><a href="secure.html#about-branches"><i class="fa fa-check"></i><b>12.1.3</b> About branches</a></li>
@@ -484,12 +484,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="deploy-golem" class="section level1">
 <h1><span class="header-section-number">Chapter 13</span> Deploy your application</h1>
 <blockquote>
-<p>Your deploys should be as boring, straightforward, and stress-free as possible. <!--SHINY.SINGLETON[1efbbb1390b1f2da3adcc5776ac72d01ac3af14a]-->
+<p>Your deploys should be as boring, straightforward, and stress-free as possible. <span class="math inline">\(<!--SHINY.SINGLETON[1efbbb1390b1f2da3adcc5776ac72d01ac3af14a]-->
 <style>.right{ text-align: right;}</style>
 <!--/SHINY.SINGLETON[1efbbb1390b1f2da3adcc5776ac72d01ac3af14a]-->
 <div class="right">
 <a href="https://zachholman.com/posts/deploying-software">How to Deploy Software - Zach Holman</a>
-</div></p>
+</div>\)</span></p>
 </blockquote>
 <p>Once your app is built, you are ready to deploy it!
 In other words, your software is now ready to be used by other users.
@@ -704,7 +704,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": ["engineering-production-grade-shiny-apps.pdf"],
 "toc": {
 "collapse": "section"
 }
