--- a/workflow.html
+++ b/workflow.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-10-02" />
+<meta name="date" content="2020-10-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -266,18 +266,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="part"><span><b>III Step 2: Prototype</b></span></li>
-<li class="chapter" data-level="8" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html"><i class="fa fa-check"></i><b>8</b> Setting up for success with <code>{golem}</code></a><ul>
-<li class="chapter" data-level="8.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
-<li class="chapter" data-level="8.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
-<li class="chapter" data-level="8.2.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
-<li class="chapter" data-level="8.2.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#set-common-files"><i class="fa fa-check"></i><b>8.2.2</b> Set common Files</a></li>
-<li class="chapter" data-level="8.2.3" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#use-recommended-elements"><i class="fa fa-check"></i><b>8.2.3</b> Use Recommended Elements</a></li>
-<li class="chapter" data-level="8.2.4" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-utilitary-functions"><i class="fa fa-check"></i><b>8.2.4</b> Add utilitary functions</a></li>
-<li class="chapter" data-level="8.2.5" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#changing-the-favicon"><i class="fa fa-check"></i><b>8.2.5</b> Changing the favicon</a></li>
+<li class="chapter" data-level="8" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html"><i class="fa fa-check"></i><b>8</b> Setting up for success with <code>{golem}</code> (#settingupsuccess)</a><ul>
+<li class="chapter" data-level="8.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
+<li class="chapter" data-level="8.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
+<li class="chapter" data-level="8.2.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
+<li class="chapter" data-level="8.2.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#set-common-files"><i class="fa fa-check"></i><b>8.2.2</b> Set common Files</a></li>
+<li class="chapter" data-level="8.2.3" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#use-recommended-elements"><i class="fa fa-check"></i><b>8.2.3</b> Use Recommended Elements</a></li>
+<li class="chapter" data-level="8.2.4" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-utilitary-functions"><i class="fa fa-check"></i><b>8.2.4</b> Add utilitary functions</a></li>
+<li class="chapter" data-level="8.2.5" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#changing-the-favicon"><i class="fa fa-check"></i><b>8.2.5</b> Changing the favicon</a></li>
 </ul></li>
-<li class="chapter" data-level="8.3" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
-<li class="chapter" data-level="8.3.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
-<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-css-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS &amp; JS Files</a></li>
+<li class="chapter" data-level="8.3" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
+<li class="chapter" data-level="8.3.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
+<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-css-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS &amp; JS Files</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="stepprotopype.html"><a href="stepprotopype.html"><i class="fa fa-check"></i><b>9</b> Building an “ipsum-app”</a><ul>
@@ -323,7 +323,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="secure.html"><a href="secure.html"><i class="fa fa-check"></i><b>12</b> Version Control</a><ul>
-<li class="chapter" data-level="12.1" data-path="secure.html"><a href="secure.html#using-version-control-with-git"><i class="fa fa-check"></i><b>12.1</b> Using Version Control with <code>git</code></a><ul>
+<li class="chapter" data-level="12.1" data-path="secure.html"><a href="secure.html#version-control"><i class="fa fa-check"></i><b>12.1</b> Using Version Control with <code>git</code></a><ul>
 <li class="chapter" data-level="12.1.1" data-path="secure.html"><a href="secure.html#why-version-control"><i class="fa fa-check"></i><b>12.1.1</b> Why Version Control?</a></li>
 <li class="chapter" data-level="12.1.2" data-path="secure.html"><a href="secure.html#git-basics-add---commit---push---pull"><i class="fa fa-check"></i><b>12.1.2</b> <code>Git</code> basics: <code>add</code> - <code>commit</code> - <code>push</code> - <code>pull</code></a></li>
 <li class="chapter" data-level="12.1.3" data-path="secure.html"><a href="secure.html#about-branches"><i class="fa fa-check"></i><b>12.1.3</b> About branches</a></li>
@@ -515,7 +515,7 @@ The main goal of this step is to spend time thinking about the application while
 We have all been in a situation during a project where we tell ourselves: “I wish I had known this sooner”: working on designing the application before building it helps lowering the chances for this kind of bad surprises.</p>
 <p>This first part of the workflow will span over three chapters:</p>
 <ul>
-<li><p>UX Matters, a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application.
+<li><p>UX Matters (@ref(#matters)), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application.
 This chapter will cover the importance of simplicity when creating web applications, the danger of trying to implement too much components (aka “feature creep”), and finally we will introduce some general rules about Web Accessibility.
 These topics are vast topics, and a lot of literature and online resources exists for all these subjects: further readings and resources are linked inside each section.</p></li>
 <li><p>Don’t rush into coding underlines why “coding first” might not be the best strategy when it comes to building a production application.
@@ -537,15 +537,15 @@ This “UI first” approach will be made possible for <code>{shiny}</code> with
 For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internal of the application.
 This part of the workflow will be developed in two chapters:</p>
 <ul>
-<li><p>The <em>Setting up for success with <code>{golem}</code></em> chapter will cover the basics of getting started with the <code>{golem}</code> package so that you can start your prototyped application with solid foundation.</p></li>
-<li><p>The <em>Building an “ipsum-app”</em> chapter will cover the importance of prototyping when it comes to building applications, then present <code>{shinipsum}</code> and <code>{fakir}</code>, and finally will introduce how you can use the “Rmd First” methodology to prototype your application back-end.</p></li>
+<li><p>The <em>Setting up for success with <code>{golem}</code></em> chapter (#@ref(#settingupsuccess)) will cover the basics of getting started with the <code>{golem}</code> package so that you can start your prototyped application with solid foundation.</p></li>
+<li><p>The <em>Building an “ipsum-app”</em> chapter (#@ref(#stepprotopype)) will cover the importance of prototyping when it comes to building applications, then present <code>{shinipsum}</code> and <code>{fakir}</code>, and finally will introduce how you can use the “Rmd First” methodology to prototype your application back-end.</p></li>
 </ul>
 </div>
 <div id="step-3-build" class="section level2">
 <h2><span class="header-section-number">5.3</span> Step 3: Build</h2>
 <p>The <em>Build</em> part is the one where you will combine the business (or back-end) logic with the front-end.
 In this third part, you will work on the core engine of the application, making the business logic work inside the interactive logic of your application.</p>
-<p>This step of the workflow is cover in the <em>Building app with <code>{golem}</code></em>, a chapter that presents the various functions you can use to build your application, <em>i.e</em> the one you will be using to combine your back-end and front-end.</p>
+<p>This step of the workflow is cover in <em>Building app with <code>{golem}</code></em> (#@ref(#stepbuild)), a chapter that presents the various functions you can use to build your application, <em>i.e</em> the one you will be using to combine your back-end and front-end.</p>
 <p>In this step, we will cover:</p>
 <ul>
 <li>How to handle dependencies in your project, <em>i.e</em> how to use leverage external libraries inside your project</li>
@@ -557,24 +557,24 @@ In this third part, you will work on the core engine of the application, making 
 </div>
 <div id="step-4-strengthen" class="section level2">
 <h2><span class="header-section-number">5.4</span> Step 4: Strengthen</h2>
-<p><em>Strengthening</em> your app is ensuring your application is immortal, in the sense that we defined in the first chapter of this book.</p>
+<p><em>Strengthening</em> your app is ensuring your application is immortal, in the sense that we defined in chapter (#@ref(#successfulshinyapp)) of this book.</p>
 <p>In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of <code>{shiny}</code> applications.
 Building a solid testing suite is crucial to the success of a project, as it allows a project to be stable on the long run, be it when you will want to add new feature, or refactor existing code:</p>
 <blockquote>
 <p>Refactoring requires we be able to confidently ensure that behavior remains identical at every iteration. We can increase our confidence that nothing has changed by writing a suite of tests (unit, integration, end-to-end), and we should not seriously consider moving forward with any refactoring effort until we’ve established sufficient test coverage.</p>
 </blockquote>
-<!--SHINY.SINGLETON[1efbbb1390b1f2da3adcc5776ac72d01ac3af14a]-->
+<p><span class="math inline">\(<!--SHINY.SINGLETON[1efbbb1390b1f2da3adcc5776ac72d01ac3af14a]-->
 <style>.right{ text-align: right;}</style>
 <!--/SHINY.SINGLETON[1efbbb1390b1f2da3adcc5776ac72d01ac3af14a]-->
 <div class="right">
 <a href="https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/">Refactoring at Scale - Maud Lemaire</a>
-</div>
+</div>\)</span></p>
 <p>This step of the workflow will span over two chapters.</p>
 <ul>
-<li><p>The first one, <em>Build yourself a safety net</em>, details how to build a testing environment for your <code>{shiny}</code> Application, be it for testing the back-end or the front-end.
+<li><p>The first one, <em>Build yourself a safety net</em> (chapter @ref(#step-secure)), details how to build a testing environment for your <code>{shiny}</code> Application, be it for testing the back-end or the front-end.
 In this chapter, you will be introduced to <code>{testthat}</code> for testing your application back-end, tools that are more linked to testing the front-end like NodeJS <code>puppeteer</code> module, <code>{shinytest}</code> and <code>{crrry}</code> for testing interactive logic, <code>{shinyloadtest}</code> and <code>{dockerstats}</code> for testing your application load.
 This chapter will also cover <code>{renv}</code> and <code>Docker</code>, two essential tools for developing in a reproducible environment.</p></li>
-<li><p>In the <em>Version Control</em> chapter, you will be introduced to <code>git</code> and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions.</p></li>
+<li><p>In the <em>Version Control</em> chapter (#@ref(#version-control)), you will be introduced to <code>git</code> and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions.</p></li>
 </ul>
 </div>
 <div id="step-5-deploy" class="section level2">
@@ -666,7 +666,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": ["engineering-production-grade-shiny-apps.pdf"],
 "toc": {
 "collapse": "section"
 }
