--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-10-02" />
+<meta name="date" content="2020-10-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -266,18 +266,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="part"><span><b>III Step 2: Prototype</b></span></li>
-<li class="chapter" data-level="8" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html"><i class="fa fa-check"></i><b>8</b> Setting up for success with <code>{golem}</code></a><ul>
-<li class="chapter" data-level="8.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
-<li class="chapter" data-level="8.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
-<li class="chapter" data-level="8.2.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
-<li class="chapter" data-level="8.2.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#set-common-files"><i class="fa fa-check"></i><b>8.2.2</b> Set common Files</a></li>
-<li class="chapter" data-level="8.2.3" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#use-recommended-elements"><i class="fa fa-check"></i><b>8.2.3</b> Use Recommended Elements</a></li>
-<li class="chapter" data-level="8.2.4" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-utilitary-functions"><i class="fa fa-check"></i><b>8.2.4</b> Add utilitary functions</a></li>
-<li class="chapter" data-level="8.2.5" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#changing-the-favicon"><i class="fa fa-check"></i><b>8.2.5</b> Changing the favicon</a></li>
+<li class="chapter" data-level="8" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html"><i class="fa fa-check"></i><b>8</b> Setting up for success with <code>{golem}</code> (#settingupsuccess)</a><ul>
+<li class="chapter" data-level="8.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
+<li class="chapter" data-level="8.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
+<li class="chapter" data-level="8.2.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
+<li class="chapter" data-level="8.2.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#set-common-files"><i class="fa fa-check"></i><b>8.2.2</b> Set common Files</a></li>
+<li class="chapter" data-level="8.2.3" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#use-recommended-elements"><i class="fa fa-check"></i><b>8.2.3</b> Use Recommended Elements</a></li>
+<li class="chapter" data-level="8.2.4" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-utilitary-functions"><i class="fa fa-check"></i><b>8.2.4</b> Add utilitary functions</a></li>
+<li class="chapter" data-level="8.2.5" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#changing-the-favicon"><i class="fa fa-check"></i><b>8.2.5</b> Changing the favicon</a></li>
 </ul></li>
-<li class="chapter" data-level="8.3" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
-<li class="chapter" data-level="8.3.1" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
-<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success-with-golem.html"><a href="setting-up-for-success-with-golem.html#add-css-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS &amp; JS Files</a></li>
+<li class="chapter" data-level="8.3" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
+<li class="chapter" data-level="8.3.1" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
+<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success-with-golem-settingupsuccess.html"><a href="setting-up-for-success-with-golem-settingupsuccess.html#add-css-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS &amp; JS Files</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="stepprotopype.html"><a href="stepprotopype.html"><i class="fa fa-check"></i><b>9</b> Building an “ipsum-app”</a><ul>
@@ -323,7 +323,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="secure.html"><a href="secure.html"><i class="fa fa-check"></i><b>12</b> Version Control</a><ul>
-<li class="chapter" data-level="12.1" data-path="secure.html"><a href="secure.html#using-version-control-with-git"><i class="fa fa-check"></i><b>12.1</b> Using Version Control with <code>git</code></a><ul>
+<li class="chapter" data-level="12.1" data-path="secure.html"><a href="secure.html#version-control"><i class="fa fa-check"></i><b>12.1</b> Using Version Control with <code>git</code></a><ul>
 <li class="chapter" data-level="12.1.1" data-path="secure.html"><a href="secure.html#why-version-control"><i class="fa fa-check"></i><b>12.1.1</b> Why Version Control?</a></li>
 <li class="chapter" data-level="12.1.2" data-path="secure.html"><a href="secure.html#git-basics-add---commit---push---pull"><i class="fa fa-check"></i><b>12.1.2</b> <code>Git</code> basics: <code>add</code> - <code>commit</code> - <code>push</code> - <code>pull</code></a></li>
 <li class="chapter" data-level="12.1.3" data-path="secure.html"><a href="secure.html#about-branches"><i class="fa fa-check"></i><b>12.1.3</b> About branches</a></li>
@@ -484,7 +484,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Engineering Production-Grade Shiny Apps</h1>
 <p class="author"><em>Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard</em></p>
-<p class="date"><em>2020-10-02</em></p>
+<p class="date"><em>2020-10-06</em></p>
 </div>
 <div id="introduction" class="section level1 unnumbered">
 <h1>Introduction</h1>
@@ -622,7 +622,7 @@ You can also find more resources in the bibliography.</p>
 But good news!
 <strong>A large portion of this book is about the methodology, and not purely the technology</strong>, so even if some of the packages and code sections used in this book can (and will) become obsolete, a significant part of what is described in this book will still be relevant.</p>
 <p>When reading this book, remember that they are a “snapshot” of various technologies and packages, which might some day become out of date, have breaking changes, or even disappear.
-The last revision to the pages you’re reading now has been done on the 2020-10-02.
+The last revision to the pages you’re reading now has been done on the 2020-10-06.
 We will <strong>try to update the online version whenever changes are made to the packages used in this book</strong>, so feel free to browse the online version<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a> for up-to-date information.</p>
 </div>
 <div id="software-information-and-conventions" class="section level2 unnumbered">
@@ -734,7 +734,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": ["engineering-production-grade-shiny-apps.pdf"],
 "toc": {
 "collapse": "section"
 }
